# nlpspark

./: .gitignore  pyproject.toml
datalake/: news_feed_1644352957.json
nlpspark/: configuration.toml  get_data.py  main.py
nlpspark/utils/: config_reader.py  get_raw_json.py  get_response.py  logger.py  save_file.py
tests/: test_nlpspark.py
