[tool.poetry]
name = "nlpspark"
version = "0.1.0"
description = "demo project to use Databricks for text mining"
authors = ["kosmobiker <kosmobiker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
azure-storage-blob = "^12.9.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
